# EthicBit_CEMU_Public_Verification

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUDIT_START_HERE.md  CONTRIBUTING.md  Dockerfile.audit  Dockerfile.build  Dockerfile.reproducible  Dockerfile.reproduction  FINAL_AUDIT_CONCLUSION.md  PACKAGE_MANIFEST.json  README.md  README_PUBLIC.md  SECURITY.md  ao_external_validation.json  arweave_external_validation.json  audit.sh  benchmark_cache_latency.py  bootstrap_headers.sh  brand.css  check-for-secrets.sh  create-final-freeze-tag.sh  final-freeze-and-tag.sh  final-master-state-consistency-report.sh  final-pre-freeze-and-tag.sh  foundry.toml  generate-html-freeze-report.sh  go.mod  hardhat.config.js  index.html  initialize-git-repo.sh  load_artifact_placeholders.sh  load_authority_matrix.sh  load_canonical_text.sh  load_comparativa_frameworks.sh  load_compliance_matrix.sh  load_impacto_agentic.sh  load_implementation_guide_review.sh  load_implementation_guide_updated_review.sh  load_paquete_unificado.sh  (+22 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.venv-mythril/: pyvenv.cfg
EthicBit_CEMU_v1_1_remediated/: RELEASE_NOTES.md  REMEDIATION_SCOPE.md
agentic/: arweave_verifier.py  ipfs_nftstorage_arweave_bridge.py  real_agent_v1_0.py
artifacts/: addendum_v3_17a_low_latency_boundary.md  artifacts.d.ts  final_external_universal_closure_instrument.md  formal_closure_certificate_multicapa_v1_0.json  production_distributed_readiness_certificate.json  production_distributed_readiness_certificate_final.json  (+2 more)
(+1268 files in other folders)
